checkbox overflow issue ie8

--- a/root/webapp/app/styles/patientview/sass/ie.scss
+++ b/root/webapp/app/styles/patientview/sass/ie.scss
@@ -30,5 +30,11 @@
             height: auto;
         }
     }
+
+    .navbar-right{
+        label{
+            min-width:100px;
+        }
+    }
 }
 
